--- a/test-output/old/ Smoke Suite 1.0/classes.html
+++ b/test-output/old/ Smoke Suite 1.0/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testcaseA1</td>
+<td>googleSerahcTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
