--- a/test-output/old/ Smoke Suite 1.0/methods-alphabetical.html
+++ b/test-output/old/ Smoke Suite 1.0/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em> Smoke Suite 1.0</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9c4b8">  <td>17/05/06 21:21:35</td>   <td>0</td> <td title="&gt;&gt;SmokeSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">&gt;&gt;checkSuiteSkip</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730173572</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>17/05/06 21:21:36</td>   <td>467</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">&gt;&gt;checkTestSkip</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730173572</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>17/05/06 21:21:43</td>   <td>7739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">&lt;&lt;reportDataSetResult</td> 
-<td>&nbsp;</td>  <td>main@1730173572</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>17/05/06 21:21:51</td>   <td>15878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">&lt;&lt;reportDataSetResult</td> 
-<td>&nbsp;</td>  <td>main@1730173572</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>17/05/06 21:21:51</td>   <td>15914</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">&lt;&lt;reportTestResult</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730173572</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>17/05/06 21:21:36</td>   <td>481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.testcaseA1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">testcaseA1</td> 
-  <td>main@1730173572</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>17/05/06 21:21:44</td>   <td>9016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.testcaseA1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@7fac631b]">testcaseA1</td> 
-  <td>main@1730173572</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>17/05/27 01:51:02</td>   <td>0</td> <td title="&gt;&gt;SmokeSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">&gt;&gt;checkSuiteSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>17/05/27 01:51:02</td>   <td>594</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">&gt;&gt;checkTestSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>17/05/27 01:51:18</td>   <td>15962</td> <td title="&lt;&lt;SmokeSuiteBaseImpl.closeConnections()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">&lt;&lt;closeConnections</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>17/05/27 01:51:02</td>   <td>665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSerahcTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">googleSerahcTest</td> 
+  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>17/05/27 01:51:11</td>   <td>9008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSerahcTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">googleSerahcTest</td> 
+  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>17/05/27 01:51:09</td>   <td>7465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>17/05/27 01:51:17</td>   <td>15654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>17/05/27 01:51:18</td>   <td>15707</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@578486a3]">&lt;&lt;reportTestResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
 </table>
