--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f8bb1">  <td>17/05/05 01:20:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearch.searchGoogle()[pri:0, instance:com.happiestmind.automation.TestCases.GoogleSearch@5e5792a0]">searchGoogle</td> 
-  <td>main@121295574</td>   <td></td> </tr>
+<tr bgcolor="a6ba85">  <td>17/05/26 23:57:47</td>   <td>0</td> <td title="&gt;&gt;SmokeSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">&gt;&gt;checkSuiteSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>17/05/26 23:57:48</td>   <td>639</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">&gt;&gt;checkTestSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>17/05/26 23:57:48</td>   <td>745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSerahcTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">googleSerahcTest</td> 
+  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>17/05/26 23:58:40</td>   <td>52344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>17/05/26 23:58:41</td>   <td>53763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSerahcTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">googleSerahcTest</td> 
+  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>17/05/26 23:59:02</td>   <td>74921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>17/05/26 23:59:02</td>   <td>74970</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">&lt;&lt;reportTestResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="a6ba85">  <td>17/05/26 23:59:02</td>   <td>74985</td> <td title="&lt;&lt;SmokeSuiteBaseImpl.closeConnections()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@3e694b3f]">&lt;&lt;closeConnections</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
 </table>
