Fixing extent null pointer issue

--- a/test-output/old/ Smoke Suite 1.0/methods.html
+++ b/test-output/old/ Smoke Suite 1.0/methods.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em> Smoke Suite 1.0</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bdf5e5">  <td>17/05/28 02:06:15</td>   <td>0</td> <td title="&gt;&gt;SmokeSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">&gt;&gt;checkSuiteSkip</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>17/05/28 02:06:15</td>   <td>564</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">&gt;&gt;checkTestSkip</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>17/05/28 02:06:15</td>   <td>579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSearchTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">googleSearchTest</td> 
-  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>17/05/28 02:06:20</td>   <td>5442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">&lt;&lt;reportDataSetResult</td> 
-<td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>17/05/28 02:06:22</td>   <td>6806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSearchTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">googleSearchTest</td> 
-  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>17/05/28 02:06:26</td>   <td>11436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">&lt;&lt;reportDataSetResult</td> 
-<td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="846679">  <td>17/05/28 02:06:26</td>   <td>11468</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">&lt;&lt;reportTestResult</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="bdf5e5">  <td>17/05/28 02:06:26</td>   <td>11662</td> <td title="&lt;&lt;SmokeSuiteBaseImpl.closeConnections()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@35d176f7]">&lt;&lt;closeConnections</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>17/06/04 00:39:06</td>   <td>0</td> <td title="&gt;&gt;SmokeSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">&gt;&gt;checkSuiteSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>17/06/04 00:39:07</td>   <td>971</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleSearch1Test.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearch1Test@cd2dae5]">&gt;&gt;checkTestSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>17/06/04 00:39:07</td>   <td>976</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">&gt;&gt;checkTestSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>17/06/04 00:39:07</td>   <td>998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSearchTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">googleSearchTest</td> 
+  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>17/06/04 00:39:14</td>   <td>7715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>17/06/04 00:39:16</td>   <td>9937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTest.googleSearchTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">googleSearchTest</td> 
+  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>17/06/04 00:39:22</td>   <td>15792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>17/06/04 00:39:22</td>   <td>15920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearch1Test.googleSearchTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearch1Test@cd2dae5]">googleSearchTest</td> 
+  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>17/06/04 00:39:29</td>   <td>22769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearch1Test.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearch1Test@cd2dae5]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>17/06/04 00:39:29</td>   <td>22832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearch1Test.googleSearchTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearch1Test@cd2dae5]">googleSearchTest</td> 
+  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>17/06/04 00:39:35</td>   <td>29033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleSearch1Test.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearch1Test@cd2dae5]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>17/06/04 00:39:35</td>   <td>29134</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleSearch1Test.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearch1Test@cd2dae5]">&lt;&lt;reportTestResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>17/06/04 00:39:35</td>   <td>29268</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">&lt;&lt;reportTestResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>17/06/04 00:39:35</td>   <td>29354</td> <td title="&lt;&lt;SmokeSuiteBaseImpl.closeConnections()[pri:0, instance:com.happiestmind.automation.suite.smoke.GoogleSearchTest@49fc609f]">&lt;&lt;closeConnections</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
 </table>
