--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">3 suites, 2 failed tests</span>
+      <span class="top-banner-font-1">3 suites, 3 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">4 methods, 2 failed,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-_Smoke_Suite_1.0" class="show-methods failed suite-_Smoke_Suite_1.0"> (show)</a> <!-- show-methods failed suite-_Smoke_Suite_1.0 -->
                     </span>
                     <div class="method-list-content failed suite-_Smoke_Suite_1.0">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-_Smoke_Suite_1.0" title="com.happiestmind.automation.suite.smoke.GoogleSearch1Test" hash-for-method="googleSearchTest(Chrome, http://google.com, hello world, not Google)">googleSearchTest(Chrome, http://google.com, hello world, not Google)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="failed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-_Smoke_Suite_1.0" title="com.happiestmind.automation.suite.smoke.GoogleSearchTest" hash-for-method="googleSearchTest(Chrome, http://google.com, hello world, not Google)">googleSearchTest(Chrome, http://google.com, hello world, not Google)</a> <!-- method navigator-link -->
@@ -117,6 +122,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-_Smoke_Suite_1.0" title="com.happiestmind.automation.suite.smoke.GoogleSearchTest" hash-for-method="googleSearchTest(Chrome, http://google.com, hello world, Google)">googleSearchTest(Chrome, http://google.com, hello world, Google)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-_Smoke_Suite_1.0" title="com.happiestmind.automation.suite.smoke.GoogleSearch1Test" hash-for-method="googleSearchTest(Chrome, http://google.com, hello world, Google)">googleSearchTest(Chrome, http://google.com, hello world, Google)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-_Smoke_Suite_1.0 -->
@@ -227,6 +237,27 @@
           <div class="suite-_Smoke_Suite_1.0-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
+              <span class="class-name">com.happiestmind.automation.suite.smoke.GoogleSearch1Test</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="googleSearchTest(Chrome, http://google.com, hello world, not Google)">
+                  </a> <!-- googleSearchTest(Chrome, http://google.com, hello world, not Google) -->
+                  <span class="method-name">googleSearchTest</span>
+                  <span class="parameters">(Chrome, http://google.com, hello world, not Google)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [not Google] but found [Google]
+	at com.happiestmind.automation.util.MiscUtils.assertion(MiscUtils.java:244)
+	at com.happiestmind.automation.suite.smoke.GoogleSearch1Test.googleSearchTest(GoogleSearch1Test.java:89)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-_Smoke_Suite_1.0-class-failed -->
+          <div class="suite-_Smoke_Suite_1.0-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
               <span class="class-name">com.happiestmind.automation.suite.smoke.GoogleSearchTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -245,6 +276,22 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-_Smoke_Suite_1.0-class-failed -->
+          <div class="suite-_Smoke_Suite_1.0-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.happiestmind.automation.suite.smoke.GoogleSearch1Test</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="googleSearchTest(Chrome, http://google.com, hello world, Google)">
+                  </a> <!-- googleSearchTest(Chrome, http://google.com, hello world, Google) -->
+                  <span class="method-name">googleSearchTest</span>
+                  <span class="parameters">(Chrome, http://google.com, hello world, Google)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-_Smoke_Suite_1.0-class-passed -->
           <div class="suite-_Smoke_Suite_1.0-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -319,6 +366,7 @@
   &lt;test name=&quot;Google Search Test1&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.happiestmind.automation.suite.smoke.GoogleSearchTest&quot;/&gt;
+      &lt;class name=&quot;com.happiestmind.automation.suite.smoke.GoogleSearch1Test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Google Search Test1 --&gt;
 &lt;/suite&gt; &lt;!--  Smoke Suite 1.0 --&gt;
@@ -375,7 +423,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Google Search Test1 (1 class)</span>
+                <span class="test-name">Google Search Test1 (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -436,20 +484,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'googleSearchTest')
-data.setCell(0, 2, 'com.happiestmind.automation.suite.smoke.GoogleSearchTest')
-data.setCell(0, 3, 4861);
+data.setCell(0, 2, 'com.happiestmind.automation.suite.smoke.GoogleSearch1Test')
+data.setCell(0, 3, 6847);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'googleSearchTest')
 data.setCell(1, 2, 'com.happiestmind.automation.suite.smoke.GoogleSearchTest')
-data.setCell(1, 3, 4627);
+data.setCell(1, 3, 6714);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'googleSearchTest')
+data.setCell(2, 2, 'com.happiestmind.automation.suite.smoke.GoogleSearch1Test')
+data.setCell(2, 3, 6198);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'googleSearchTest')
+data.setCell(3, 2, 'com.happiestmind.automation.suite.smoke.GoogleSearchTest')
+data.setCell(3, 3, 5850);
 window.suiteTableData['_Smoke_Suite_1.0']= { tableData: data, tableDiv: 'times-div-_Smoke_Suite_1.0'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-_Smoke_Suite_1.0">
               </div> <!-- times-div-_Smoke_Suite_1.0 -->
             </div> <!-- times-div -->
@@ -497,16 +553,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'googleSearchRegressionTest')
 data.setCell(0, 2, 'com.happiestmind.automation.suite.regression.RegressionSearchTest')
-data.setCell(0, 3, 5255);
+data.setCell(0, 3, 8058);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'googleSearchRegressionTest')
 data.setCell(1, 2, 'com.happiestmind.automation.suite.regression.RegressionSearchTest')
-data.setCell(1, 3, 4894);
+data.setCell(1, 3, 7158);
 window.suiteTableData['_Regression_1.0']= { tableData: data, tableDiv: 'times-div-_Regression_1.0'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-_Regression_1.0">
               </div> <!-- times-div-_Regression_1.0 -->
             </div> <!-- times-div -->
@@ -535,9 +591,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-_Smoke_Suite_1.0" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.happiestmind.automation.suite.smoke.GoogleSearch1Test</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">checkSuiteSkip</span>
+                <br/>
+                <span class="ignored-method-name">closeConnections</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Parent_Test_Suite" class="panel">
@@ -565,35 +630,73 @@ return data;
                 <span class="method-name">checkSuiteSkip</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.happiestmind.automation.suite.smoke.GoogleSearch1Test</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">checkTestSkip</span>
-                <span class="method-start">566 ms</span>
+                <span class="method-start">975 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.happiestmind.automation.suite.smoke.GoogleSearchTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">checkTestSkip</span>
+                <span class="method-start">980 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">googleSearchTest(Chrome, http://google.com, hello world, Google)</span>
-                <span class="method-start">580 ms</span>
+                <span class="method-start">1002 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reportDataSetResult([TestResult name=googleSearchTest status=SUCCESS method=GoogleSearchTest.googleSearchTest(java.lang....)</span>
-                <span class="method-start">5443 ms</span>
+                <span class="method-start">7718 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">googleSearchTest(Chrome, http://google.com, hello world, not Google)</span>
-                <span class="method-start">6808 ms</span>
+                <span class="method-start">9941 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reportDataSetResult([TestResult name=googleSearchTest status=FAILURE method=GoogleSearchTest.googleSearchTest(java.lang....)</span>
-                <span class="method-start">11438 ms</span>
+                <span class="method-start">15796 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.happiestmind.automation.suite.smoke.GoogleSearch1Test</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">googleSearchTest(Chrome, http://google.com, hello world, Google)</span>
+                <span class="method-start">15924 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">reportDataSetResult([TestResult name=googleSearchTest status=SUCCESS method=GoogleSearch1Test.googleSearchTest(java.lang...)</span>
+                <span class="method-start">22772 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">googleSearchTest(Chrome, http://google.com, hello world, not Google)</span>
+                <span class="method-start">22836 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">reportDataSetResult([TestResult name=googleSearchTest status=FAILURE method=GoogleSearch1Test.googleSearchTest(java.lang...)</span>
+                <span class="method-start">29037 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">reportTestResult</span>
-                <span class="method-start">11470 ms</span>
+                <span class="method-start">29138 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.happiestmind.automation.suite.smoke.GoogleSearchTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">reportTestResult</span>
+                <span class="method-start">29272 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">closeConnections</span>
-                <span class="method-start">11664 ms</span>
+                <span class="method-start">29357 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
@@ -617,33 +720,33 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">checkTestSkip</span>
-                <span class="method-start">4 ms</span>
+                <span class="method-start">13 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">googleSearchRegressionTest(Chrome, http://google.com, hello world, Google)</span>
-                <span class="method-start">7 ms</span>
+                <span class="method-start">16 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reportDataSetResult([TestResult name=googleSearchRegressionTest status=SUCCESS method=RegressionSearchTest.googleSearchR...)</span>
-                <span class="method-start">5264 ms</span>
+                <span class="method-start">8075 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">googleSearchRegressionTest(Chrome, http://google.com, hello world, not Google)</span>
-                <span class="method-start">5292 ms</span>
+                <span class="method-start">8128 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reportDataSetResult([TestResult name=googleSearchRegressionTest status=FAILURE method=RegressionSearchTest.googleSearchR...)</span>
-                <span class="method-start">10187 ms</span>
+                <span class="method-start">15288 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">reportTestResult</span>
-                <span class="method-start">10225 ms</span>
+                <span class="method-start">15356 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">closeConnections</span>
-                <span class="method-start">10286 ms</span>
+                <span class="method-start">15471 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
