--- a/test-output/old/ Regression 1.0/methods.html
+++ b/test-output/old/ Regression 1.0/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em> Regression 1.0</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77b7b6">  <td>17/05/28 02:06:27</td>   <td>0</td> <td title="&gt;&gt;RegressionSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">&gt;&gt;checkSuiteSkip</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>17/05/28 02:06:27</td>   <td>4</td> <td>&nbsp;</td><td title="&gt;&gt;RegressionSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">&gt;&gt;checkTestSkip</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>17/05/28 02:06:27</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionSearchTest.googleSearchRegressionTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">googleSearchRegressionTest</td> 
-  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>17/05/28 02:06:32</td>   <td>5264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegressionSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">&lt;&lt;reportDataSetResult</td> 
-<td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>17/05/28 02:06:32</td>   <td>5292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionSearchTest.googleSearchRegressionTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">googleSearchRegressionTest</td> 
-  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>17/05/28 02:06:37</td>   <td>10188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegressionSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">&lt;&lt;reportDataSetResult</td> 
-<td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>17/05/28 02:06:37</td>   <td>10225</td> <td>&nbsp;</td><td title="&lt;&lt;RegressionSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">&lt;&lt;reportTestResult</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="77b7b6">  <td>17/05/28 02:06:37</td>   <td>10286</td> <td title="&lt;&lt;RegressionSuiteBaseImpl.closeConnections()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@26aa12dd]">&lt;&lt;closeConnections</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
+<tr bgcolor="aa72dd">  <td>17/06/04 00:39:36</td>   <td>0</td> <td title="&gt;&gt;RegressionSuiteBaseImpl.checkSuiteSkip()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">&gt;&gt;checkSuiteSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7276c2">  <td>17/06/04 00:39:36</td>   <td>9</td> <td>&nbsp;</td><td title="&gt;&gt;RegressionSearchTest.checkTestSkip()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">&gt;&gt;checkTestSkip</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7276c2">  <td>17/06/04 00:39:36</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionSearchTest.googleSearchRegressionTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">googleSearchRegressionTest</td> 
+  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7276c2">  <td>17/06/04 00:39:44</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegressionSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7276c2">  <td>17/06/04 00:39:44</td>   <td>8124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionSearchTest.googleSearchRegressionTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">googleSearchRegressionTest</td> 
+  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7276c2">  <td>17/06/04 00:39:51</td>   <td>15284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegressionSearchTest.reportDataSetResult(org.testng.ITestResult)[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">&lt;&lt;reportDataSetResult</td> 
+<td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="7276c2">  <td>17/06/04 00:39:51</td>   <td>15352</td> <td>&nbsp;</td><td title="&lt;&lt;RegressionSearchTest.reportTestResult()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">&lt;&lt;reportTestResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="aa72dd">  <td>17/06/04 00:39:51</td>   <td>15467</td> <td title="&lt;&lt;RegressionSuiteBaseImpl.closeConnections()[pri:0, instance:com.happiestmind.automation.suite.regression.RegressionSearchTest@711f39f9]">&lt;&lt;closeConnections</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408652377</td>   <td></td> </tr>
 </table>
